Apache ManifoldCF Plugin for SharePoint 2010 change Log
$Id$

======================= 0.3-dev =====================

CONNECTORS-758: Change log output to go to trace log.
(Christian M. Rieck, Will Parkinson, Karl Wright)

======================= Release 0.2 =====================

CONNECTORS-534: Repackage plugins to have a true binary release,
with appropriate DEPENDENCIES.txt, README's etc.
(Karl Wright)

======================= Release 0.1 =====================

CONNECTORS-492: Add a GetListItems() method to support obtaining
documents without limits on count.
(Ahmet Arslan, Piergiorgio Lucidi, Joe Becknell, Karl Wright)

CONNECTORS-498: Remove ToLower() since it is locale-specific.
(Ahmet Arslan, Karl Wright)

Initial commit.
(Karl Wright)